--- a/src/styles/components/forms/_select.scss
+++ b/src/styles/components/forms/_select.scss
@@ -13,6 +13,7 @@
 	background: $select-bg;
 	padding: 0;
 	border: 0;
+	margin-bottom: rem($form-block-margin-bottom);
 
 	.ks-select-dropdown {
 		border: solid $select-dropdown-border-color;
