--- a/src/styles/variables/_autocomplete.scss
+++ b/src/styles/variables/_autocomplete.scss
@@ -2,8 +2,8 @@
 @import "_global";
 
 $ac-bg: $white !default;
-$ac-margin-right: 0.3rem !default;
-$ac-margin-left: 0.3rem !default;
+$ac-margin-right: 0 !default;
+$ac-margin-left: 0 !default;
 
 //
 // Input Box
