--- a/src/styles/variables/_forms.scss
+++ b/src/styles/variables/_forms.scss
@@ -10,11 +10,12 @@ $form-color: $text-color !default;
 $form-padding: 0.5rem !default;
 $form-box-shadow: inset 0 1px 5px rgba($black, 0.1) !default;
 $form-group-margin-bottom: 1rem !default;
+$form-font-size: 0.8rem !default;
 
 //
 // Title
 //
-$form-title-margin-bottom: 0.5rem !default;
+$form-title-margin-bottom: 0.3rem !default;
 $form-title-margin-right: 0.5rem !default;
 $form-title-font-weight: 600 !default;
 $form-title-disabled-opacity: 0.7 !default;
@@ -22,7 +23,7 @@ $form-title-disabled-opacity: 0.7 !default;
 //
 // Form Input Block
 //
-$form-block-margin-top: 0.3rem !default;
+$form-block-margin-top: 0 !default;
 $form-block-margin-bottom: 0.3rem !default;
 
 //
